# koperasi

./: .lintstagedrc.json  LICENSE  README.md  README_CN.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build-linux.yaml  build-macos.yaml  build-windows.yaml  build.yaml
.husky/: pre-commit
src/: App.css  App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: Sidebar.vue
src/router/: index.ts
src/views/: Loans.vue  Login.vue
